# sqlitx

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-crate.yml  release.yml
src/: icons.rs  main.rs  sqlit.rs  types.rs
