[package]
name = "sqlitx"
version = "0.1.0"
edition = "2021"
description = "fzf-powered connection picker for sqlit"
license = "MIT"
repository = "https://github.com/sudosubin/sqlitx"

[dependencies]
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
